# mqtt

./: CMakeLists.txt  TC74server.service  cgi-website.c  mqtt_publish.c
client/: CMakeLists.txt  TC74.c  TC74.h  mqtt_publish.c
server/: CMakeLists.txt  mqtt_subscribe.c
website/: CMakeLists.txt  cgi-website.c
